# Agent-Abuse-Shield

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.ini.example  install.sh  pyproject.toml  requirements.txt  uninstall.sh
.github/workflows/: release.yml  test.yml
almc_shield/: __init__.py  __main__.py  circuit_breaker.py  config.py  env_detect.py  f2b_client.py  heartbeat.py  http_client.py  logging_setup.py  main.py  outbox.py  parser.py  puller.py  reader.py  sender.py  state.py  version.py
almc_shield/shield/: actions.py  cli.py  health.py  render.py  snapshot.py  tui.py
share/fail2ban/jail.d/: almc-blocklist.conf
share/sudoers.d/: almc-shield
share/systemd/: almc-shield.service
tests/: conftest.py  test_circuit_breaker.py  test_config.py  test_f2b_client.py  test_main_snapshot.py  test_outbox.py  test_parser.py  test_puller.py  test_sender.py  test_state.py
tests/shield/: test_actions.py  test_cli.py  test_health.py  test_render.py  test_snapshot.py  test_tui.py
